--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p>This graph show us about the businesses by zip_code at New Orleans. The zip_code that has the most businesses is "70130"</p>
 <img src="download (2).png" width = "104" height = "142">
 
-<p></p>
-<img src= "" width = "104" height = "142">
+<p>This image display the percent of businesses in the city by zip code at New Orleans. The highest percentage is the zip</p>
+<img src="download (3).png" width = "104" height = "142">
