--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@
 
 <p>This image display the percent of businesses in the city by zip code at New Orleans. The highest percentage is the zip</p>
 <img src="download (3).png" width = "104" height = "142">
+
+<p></p>
+<img src="download ().png" width = "104" height = "142">
+
