--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <p>This image display the percent of businesses in the city by zip code at New Orleans. The highest percentage is the zip</p>
 <img src="download (3).png" width = "104" height = "142">
 
-<p></p>
-<img src="download ().png" width = "104" height = "142">
+<p>This image show us all the businesses in the city</p>
+<img src="picture 3.png" width = "104" height = "142">
 
+<p></p>
+<img src="" width = "104" height = "142">
