--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <p>This image show us all the businesses in the city</p>
 <img src="picture 3.png" width = "104" height = "142">
 
-<p></p>
-<img src="" width = "104" height = "142">
+<p>This image show us all the businesses in the city by zip_code</p>
+<img src="picture 4.png" width = "104" height = "142">
+
