--- a/index.html
+++ b/index.html
@@ -10,3 +10,5 @@
 <p>This image show us all the businesses in the city by zip_code</p>
 <img src="picture 4.png" width = "104" height = "142">
 
+<p>This image display all the number of blighted properties by zip code</p>
+<img src="picture 5.png" width = "104" height = "142">
