--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
 
 <p>This image display all the number of blighted properties by zip code</p>
 <img src="picture 5.png" width = "104" height = "142">
+
+<p>This image display all The blighted properties for auction with the business organizing by zip code</p>
+<img src="picture 6.png" width = "104" height = "142">
