--- a/index.html
+++ b/index.html
@@ -15,3 +15,6 @@
 
 <p>This image display all The blighted properties for auction with the business organizing by zip code</p>
 <img src="picture 6.png" width = "104" height = "142">
+
+<p>This image show us a zip code tree map with the color being the amount of blighted properties and size being the amount of businesses in the zip code</p>
+<img src="picture 7.png" width = "104" height = "142">
