--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p>This graph show us about the businesses by zip_code at New Orleans. The zip_code that has the most businesses is "70130"</p>
 <img src="download (2).png" width = "377" height = "407">
 
-<p>This image display the percent of businesses in the city by zip code at New Orleans. The highest percentage is the zip</p>
+<p>This image display as apie chart and It about the percent of businesses in the city by zip code at New Orleans. The highest percentage is the zip</p>
 <img src="download (3).png" width = "377" height = "407">
 
 <p>This image show us all the businesses in the city</p>
@@ -10,7 +10,7 @@
 <p>This image show us all the businesses in the city by zip_code</p>
 <img src="picture 4.png" width = "377" height = "407">
 
-<p>This image display all the number of blighted properties by zip code</p>
+<p>This image display all the number of blighted properties by zip code and the highest blighted properties is at 70117 zip</p>
 <img src="picture 5.png" width = "377" height = "407">
 
 <p>This image display all The blighted properties for auction with the business organizing by zip code</p>
